# HAL

./: .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.md  codecov.yml  pyproject.toml  pyrightconfig.json  readthedocs.yml
.github/workflows/: linting.yml  release.yml  test.yml
docs/sphinx/: actor-commands.rst  actor-schema.rst  api.rst  changelog.md  conf.py  development.rst  index.rst  intro.rst  macros.rst
python/hal/: __init__.py  __main__.py  exceptions.py
src/hal/: __init__.py  __main__.py  actor.py  exceptions.py
src/hal/actor/: __init__.py  actor.py  bypass.py  calibrations.py  expose.py  goto.py  goto_field.py  script.py  status.py
src/hal/actor/commands/: __init__.py  abort_exposures.py  auto.py  auto_pilot.py  bypass.py  calibrations.py  expose.py  goto.py  goto_field.py  script.py  status.py  test.py
src/hal/commands/: __init__.py  calibrations.py  goto.py  goto_field.py  script.py  status.py
src/hal/etc/: hal.yml  schema.json
src/hal/etc/scripts/: eveningcals.inp  eveningcals_nodither.inp  morningcals.inp  morningcals_nodither.inp
src/hal/etc/scripts/apo/: eveningcals.inp  morningcals.inp  test.inp
src/hal/etc/scripts/lco/: cartchange.inp  eveningcals.inp  morningcals.inp
src/hal/helpers/: __init__.py  apogee.py  boss.py  cherno.py  ffs.py  jaeger.py  lamps.py  overhead.py  scripts.py  tcc.py
src/hal/macros/: __init__.py  apogee_dome_flat.py  auto.py  auto_pilot.py  base.py  expose.py  goto_field.py  macro.py  test_macro.py
src/hal/macros/stages/: lamps.py
src/hal/tools/: __init__.py  apogee.py  ffs.py  scripts.py  tcc.py
tests/: conftest.py  test_actor.py  test_expose_helper.py  test_hal.py  test_macro.py  test_main.py  test_overhead_helper.py
tests/actor/: test_command_abort_exposures.py  test_command_auto_pilot.py  test_command_expose.py
tests/helpers/: test_boss_helper.py
tests/macros/: test_apogee_dome_flat.py  test_auto.py  test_auto_pilot.py  test_expose.py  test_goto_field.py
